--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="right-turn.png" width="200px" height="70px" id="navimg"></a>
+            <a href="index.html"><img src="right-turn.png" width="200px" height="70px" id="navimg" alt="Image is missing"></a>
             <div class="main1">
                 <a href="about.html">About</a>
                 <a href="services.html">Services</a>
@@ -44,7 +44,7 @@
                 <br>
                 <br>
                 <br>
-                <textarea name="message" id="" cols="70" rows="10" class="contactform"
+                <textarea name="message" cols="70" rows="10" class="contactform"
                     placeholder="Message"></textarea><br><br>
                 <button type="button" value="Submit" style="float: right;" class="buttt buttt1">Submit
                     <span class="angle">
