--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <a href="index.html">
-                <img src="right-turn.png" id="navimg">
+                <img src="right-turn.png" id="navimg" alt="Image is missing">
             </a>
             <div class="main1">
                 <a href="about.html">
